# cheer_hokkaido_coupon

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  scrape.py
templates/: index.html
